# HW03-A

./: .dockerignore  .env.example  .gitignore  01_model_serving_student.ipynb  Dockerfile  Dockerfile.naive  README.md  docker-compose.yml  pyproject.toml
data/features/: listing_availability_features_v1_student.parquet
k8s/: deployment.yaml  service.yaml
reports/: docker_size_report.md
src/airbnb_serving/: app.py  predictor.py  schema.py
